# Authentico

./: README.md  diesel.toml  package-lock.json  package.json  tailwind.config.ts
backend/: Cargo.toml
backend/src/: server.rs
backend/src/api/: mod.rs
backend/src/api/handlers/: auth.rs  health.rs  mod.rs  not_found.rs  users.rs
backend/src/api/routes/: auth.rs  health.rs  mod.rs  users.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/errors/: mod.rs
backend/src/middleware/: auth_middleware.rs  mod.rs  rate_limit.rs
backend/src/models/: mod.rs  token.rs  user.rs
backend/src/repositories/: mod.rs  token_repository.rs  user_repository.rs
backend/src/services/: auth_service.rs  user_service.rs
backend/src/utils/: jwt.rs  password.rs
migrations/2025-04-13-100803_create_users/: up.sql
migrations/2025-04-13-101340_create_tokens/: up.sql
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: auth.tsx  layout.tsx
src/app/(auth)/login/: page.tsx
src/app/about/: page.tsx
src/app/blog/: page.tsx
src/app/faq/: page.tsx
src/components/: icons.tsx
src/components/auth/: login-form.tsx  register-form.tsx
src/components/home/: brands-section.tsx  cta-section.tsx  features-section.tsx  how-it-works-section.tsx  pricing-section.tsx  testimonials-section.tsx
src/components/layout/: footer.tsx  hero-section.tsx  navbar.tsx
src/components/spline/: SplinePriceCards.tsx
src/components/ui/: SplineText.tsx  luxury-pattern.tsx
src/context/: app-context.tsx
src/lib/: auth.tsx  colors.ts  prisma.ts
(+11 files in other folders)
