[package]
name = "authentico-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and related
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-web-httpauth = "0.8.1"  # Authentication middleware

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

# Database
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = { version = "2.1.0" }
r2d2 = "0.8.10"

# Authentication & Security
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.20", features = ["json"] }

# Utilities
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
chrono = { version = "0.4.30", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
thiserror = "1.0.47"
async-trait = "0.1.73"

# Rate limiting
governor = "0.5.1"

# TLS/HTTPS
rustls = "0.21.6"
rustls-pemfile = "1.0.3"

[dev-dependencies]
mockall = "0.11.4"
actix-rt = "2.9.0"
